@@ -9,3 +9,5 @@ $CFG->dbname = 'xe';
 $CFG->dbuser = 'odissea';
 $CFG->dbpass = 'agora';
 $CFG->prefix = 'm2';
+
+$CFG->dataroot = '/dades/odissea/docs';
